// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TooltipView Placement does not render arrow styling if disabled 1`] = `
.c0 {
  margin: 6px;
}

<div
  className="c-tooltip c-arrow--b c0"
  data-garden-id="tooltip.tooltip"
  data-garden-version="version"
  size="small"
/>
`;

exports[`TooltipView Placement renders bottom placement correctly 1`] = `
.c0 {
  margin: 6px;
}

<div
  className="c-tooltip c-arrow c-arrow--t c0"
  data-garden-id="tooltip.tooltip"
  data-garden-version="version"
  size="small"
/>
`;

exports[`TooltipView Placement renders bottom-end placement correctly 1`] = `
.c0 {
  margin: 6px;
}

<div
  className="c-tooltip c-arrow c-arrow--tr c0"
  data-garden-id="tooltip.tooltip"
  data-garden-version="version"
  size="small"
/>
`;

exports[`TooltipView Placement renders bottom-start placement correctly 1`] = `
.c0 {
  margin: 6px;
}

<div
  className="c-tooltip c-arrow c-arrow--tl c0"
  data-garden-id="tooltip.tooltip"
  data-garden-version="version"
  size="small"
/>
`;

exports[`TooltipView Placement renders left placement correctly 1`] = `
.c0 {
  margin: 6px;
}

<div
  className="c-tooltip c-arrow c-arrow--r c0"
  data-garden-id="tooltip.tooltip"
  data-garden-version="version"
  size="small"
/>
`;

exports[`TooltipView Placement renders left-end placement correctly 1`] = `
.c0 {
  margin: 6px;
}

<div
  className="c-tooltip c-arrow c-arrow--rb c0"
  data-garden-id="tooltip.tooltip"
  data-garden-version="version"
  size="small"
/>
`;

exports[`TooltipView Placement renders left-start placement correctly 1`] = `
.c0 {
  margin: 6px;
}

<div
  className="c-tooltip c-arrow c-arrow--rt c0"
  data-garden-id="tooltip.tooltip"
  data-garden-version="version"
  size="small"
/>
`;

exports[`TooltipView Placement renders right placement correctly 1`] = `
.c0 {
  margin: 6px;
}

<div
  className="c-tooltip c-arrow c-arrow--l c0"
  data-garden-id="tooltip.tooltip"
  data-garden-version="version"
  size="small"
/>
`;

exports[`TooltipView Placement renders right-end placement correctly 1`] = `
.c0 {
  margin: 6px;
}

<div
  className="c-tooltip c-arrow c-arrow--lb c0"
  data-garden-id="tooltip.tooltip"
  data-garden-version="version"
  size="small"
/>
`;

exports[`TooltipView Placement renders right-start placement correctly 1`] = `
.c0 {
  margin: 6px;
}

<div
  className="c-tooltip c-arrow c-arrow--lt c0"
  data-garden-id="tooltip.tooltip"
  data-garden-version="version"
  size="small"
/>
`;

exports[`TooltipView Placement renders top placement correctly 1`] = `
.c0 {
  margin: 6px;
}

<div
  className="c-tooltip c-arrow c-arrow--b c0"
  data-garden-id="tooltip.tooltip"
  data-garden-version="version"
  size="small"
/>
`;

exports[`TooltipView Placement renders top-end placement correctly 1`] = `
.c0 {
  margin: 6px;
}

<div
  className="c-tooltip c-arrow c-arrow--br c0"
  data-garden-id="tooltip.tooltip"
  data-garden-version="version"
  size="small"
/>
`;

exports[`TooltipView Placement renders top-start placement correctly 1`] = `
.c0 {
  margin: 6px;
}

<div
  className="c-tooltip c-arrow c-arrow--bl c0"
  data-garden-id="tooltip.tooltip"
  data-garden-version="version"
  size="small"
/>
`;

exports[`TooltipView Sizing renders extra-large size correctly 1`] = `
.c0 {
  margin: 12px;
}

<div
  className="c-tooltip c-tooltip--extra-large c0"
  data-garden-id="tooltip.tooltip"
  data-garden-version="version"
  size="extra-large"
/>
`;

exports[`TooltipView Sizing renders large size correctly 1`] = `
.c0 {
  margin: 8px;
}

<div
  className="c-tooltip c-tooltip--large c0"
  data-garden-id="tooltip.tooltip"
  data-garden-version="version"
  size="large"
/>
`;

exports[`TooltipView Sizing renders medium size correctly 1`] = `
.c0 {
  margin: 6px;
}

<div
  className="c-tooltip c-tooltip--medium c0"
  data-garden-id="tooltip.tooltip"
  data-garden-version="version"
  size="medium"
/>
`;

exports[`TooltipView renders RTL styling correctly 1`] = `
.c0 {
  margin: 6px;
}

<div
  className="c-tooltip is-rtl c0"
  data-garden-id="tooltip.tooltip"
  data-garden-version="version"
  size="small"
/>
`;

exports[`TooltipView renders default styling correctly 1`] = `
.c0 {
  margin: 6px;
}

<div
  className="c-tooltip c0"
  data-garden-id="tooltip.tooltip"
  data-garden-version="version"
  size="small"
/>
`;
